# livecell-distillation

./: .gitignore  LICENSE  README.md  pyproject.toml
livecell_distillation/: __init__.py  caching.py  config.py  data.py  loss.py  metrics.py  plotting.py  training.py  utils.py
scripts/: cache_logits.py  distill.py
tests/: test_config_and_data.py  test_loss_and_metrics.py
